--- a/src/Components/AppBar/Appbar.Component.css
+++ b/src/Components/AppBar/Appbar.Component.css
@@ -1,5 +1,24 @@
 .container__appbar{
-    width: 500px;
-    height: 100px;
-    background-color: blue;
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    top:0;
+    left:231px;
+    padding-left: 50px;
+    padding-top: 30px;
+    /* background-color: blue; */
+}
+
+
+
+.container__search input{
+    width: 300px;
+    height: 35px;
+    background-color: transparent;
+    padding-left: 20px;
+    font-size: 16px;
+    font-family: verdana;
+    outline: none;
+    border: 1px solid #ffffff6f;
+    border-radius: 18px;
 }
