--- a/src/Components/SideBar/Siderbar.Component.css
+++ b/src/Components/SideBar/Siderbar.Component.css
@@ -1,6 +1,76 @@
 .container__sidebar{
-    width: 100px;
-    height: 300px;
-    background-color: red;
+    width: 230px;
+    height: 100%;
+    /* background-color: red; */
+    position: fixed;
+    left: 0;
+    border-right: 1px solid rgb(134, 133, 131);
+    top: 0;
     
+}
+.sidebar__title{
+    color: rgb(250, 172, 172);
+    font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 400;; 
+    text-align: left;
+    font-size: 25px;
+    margin-left: 40px;
+
+}
+
+.container__sidebar__items{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: red; */
+    cursor: pointer;
+    
+}
+.container__sidebar__item{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    /* cursor: pointer; */
+    opacity: .6 !important;
+    width: 198px;
+    /* background-color: red; */
+    /* width: 90%; */
+    /* border-radius: 6px; */
+    /* margin-left: 10px; */
+    align-items: center;
+    
+    /* margin-left: -10px; */
+    padding-left: 34px;
+    margin-bottom: 8px;
+    text-align: center;
+
+    /* background-color: red; */
+}
+.container__sidebar__item:hover{
+    opacity: 1 !important;
+    /* background-color: #222; */
+}
+
+
+.container__sidebar__item img{
+    width: 23px;
+    margin-right: 10px;
+}
+
+.container__sidebar__item p{
+   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   font-size: 14px;
+   text-align: center;
+}
+
+
+.sidebar__container__title{
+    font-family: sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    margin-bottom: 10px;
+    margin-left: 35px;
+    color: #999
 }
