--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -16,3 +14,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
  
+
+.resetlinkrouter{
+  text-decoration-line: none;
+  color: #ddd;
+}
