--- a/src/Components/SideBar/Siderbar.Component.css
+++ b/src/Components/SideBar/Siderbar.Component.css
@@ -69,8 +69,9 @@
 .sidebar__container__title{
     font-family: sans-serif;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 12px;
+
     margin-bottom: 10px;
-    margin-left: 35px;
+    margin-left: -8rem;
     color: #999
 }
