refactoring media querys

--- a/src/Components/SideBar/Siderbar.Component.css
+++ b/src/Components/SideBar/Siderbar.Component.css
@@ -8,6 +8,12 @@
     top: 0;
     
 }
+
+@media screen and (max-width: 990px) {
+    .container__sidebar{
+        display: none;
+    }
+}
 .sidebar__title{
     color: rgb(250, 172, 172);
     font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
