--- a/src/Components/AppBar/Appbar.Component.css
+++ b/src/Components/AppBar/Appbar.Component.css
@@ -5,9 +5,11 @@
     top:0;
     left:231px;
     padding-left: 50px;
+    background-color: #242424;
+   
     padding-top: 30px;
     margin-bottom: 100px;
-    /* z-index: -1; */
+    z-index: 10;
     /* background-color: blue; */
 }
 
