--- a/src/Components/SideBar/Siderbar.Component.css
+++ b/src/Components/SideBar/Siderbar.Component.css
@@ -1,19 +1,16 @@
 .container__sidebar{
     width: 230px;
     height: 100%;
-    /* background-color: red; */
+    background-color: #242424;
     position: fixed;
     left: 0;
+    z-index: 20;
     border-right: 1px solid rgb(134, 133, 131);
     top: 0;
     
 }
 
-@media screen and (max-width: 990px) {
-    .container__sidebar{
-        display: none;
-    }
-}
+ 
 .sidebar__title{
     color: rgb(250, 172, 172);
     font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
