--- a/src/Components/AppBar/Appbar.Component.css
+++ b/src/Components/AppBar/Appbar.Component.css
@@ -6,7 +6,9 @@
     left:231px;
     padding-left: 50px;
     background-color: #242424f4;
- 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;
  
@@ -20,6 +22,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     margin-top: -5px;
 }
 
@@ -33,6 +36,7 @@
     align-items: center;
     background-color: #333;
     cursor: pointer;
+    margin-left: 7px;
     padding: 2px;
   
 }
@@ -42,4 +46,8 @@
 }
 .icons__bar img{
     width: 30px;
+}
+
+.container__icon img{
+    width: 50px;
 }
