--- a/src/Pages/Home/HomePage.css
+++ b/src/Pages/Home/HomePage.css
@@ -7,7 +7,7 @@
  
 
 .container__children__routes{
-    width: 940px;
+    width:78%;
     margin-top: 70px;
     /* margin-left: -10px; */
     z-index: 10;
@@ -19,9 +19,8 @@
     align-items: center;
     margin-right: 20px;
     flex-wrap: wrap;
-    margin-left: 60px;
-
-    /* margin-left: 50px; */
+     
+ 
 }
  
 
