--- a/src/Components/AppBar/Appbar.Component.css
+++ b/src/Components/AppBar/Appbar.Component.css
@@ -1,15 +1,15 @@
 .container__appbar{
     width: 100% !important;
-    height: 40px;
+    height: 55px;
     position: fixed;
     top:0;
     left:231px;
     padding-left: 50px;
     background-color: #242424f4;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    padding-top: 10px;
+    padding-top: 13px;
     padding-bottom: 10px;
  
 
@@ -49,5 +49,6 @@
 }
 
 .container__icon img{
-    width: 50px;
+    transform : scale(.9) ;
+    width: 80px;
 }
