--- a/src/Components/CarrouselTop/Carrouseltop.Component.css
+++ b/src/Components/CarrouselTop/Carrouseltop.Component.css
@@ -65,14 +65,14 @@
 }
 @keyframes animateCarrousel {
     0%, 90%{
-        transform: scale(1);
-        /* filter: blur(0); */
+        transform: scale(.9);
+        filter: blur(0);
         opacity: 1; 
     } 
     100% {
-        transform: scale(.9);
+        transform: scale(1);
         opacity: 0;
-        /* filter: blur(5px); */
+        filter: blur(3px);
       }
        
 }
