--- a/src/Components/SearchModal/SearchModal.Component.css
+++ b/src/Components/SearchModal/SearchModal.Component.css
@@ -5,7 +5,7 @@
     height: 500px;
     border-top-right-radius: 10px !important;
     border-top-left-radius: 10px !important;
-    width: 600px;
+    width: 800px;
     box-shadow: 1px 1px 1px 10px #222 ;
    
 }
@@ -65,4 +65,101 @@
 
 
 
+.modal__card{
+    width:150px;
+    height: 245px;
+    /* border: 2px solid yellow; */
+    background-color: #383737;
+   
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+   border-top-left-radius: 25px;
+   border-top-right-radius: 25px;
+   margin-top: 12px;
+   margin-bottom: 20px;
+   margin-left: 12px;
+   cursor: pointer;
 
+}
+
+.modal__card:hover{
+
+    transition: .3s; 
+}
+.modal__card:hover .card__image {
+    transition: .3s;
+    transform: translateY(-2px);
+ 
+    /* border-radius: 10%; */
+   
+}
+ 
+.modal__card__image{
+    width: inherit;
+    /* height: inherit; */
+   
+    border-top-right-radius: 22px;
+    border-top-left-radius: 22px;
+    
+}
+.modal__card__title{
+    
+    margin: 0;
+    font-family: sans-serif;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+    
+}
+
+.modal__container__title__card{
+   
+ 
+   
+    height: 26px;
+ 
+   border-bottom-left-radius: 20px !important;
+   border-bottom-right-radius: 20px !important;
+    margin-top: 1px !important;
+    text-align: center;
+    width: inherit;
+    background-color: #383737;
+
+}
+
+.container__modal__movies{
+    display: flex;
+    justify-content: center;
+    overflow-y: scroll;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 400px;
+    /* background-color: #333; */
+
+}
+.scroll__items{
+    height: 355px;
+    scrollbar-width: 10px;
+    overflow-y: scroll;
+   
+}    
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #333;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(181, 40, 40);
+    border-radius: 4px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #a09e9e;
+  }
