--- a/src/Pages/Search/SearchPage.css
+++ b/src/Pages/Search/SearchPage.css
@@ -1,12 +1,11 @@
- 
 
 .flex__modal{
     background-color: rgba(37, 36, 36, 0.955);
-    height: 500px;
+    /* height: 500px; */
     border-top-right-radius: 10px !important;
     border-top-left-radius: 10px !important;
-    width: 800px;
-    box-shadow: 1px 1px 1px 10px #222 ;
+    width: 970px;
+    /* box-shadow: 1px 1px 1px 10px #222 ; */
    
 }
 
@@ -33,7 +32,7 @@
 }
 
 .container__input__modal input{
-    width: 430px;
+    width: 530px;
     height: 50px;
     padding-right: 10px;
     margin-top: 15px;
@@ -77,7 +76,7 @@
    border-top-right-radius: 25px;
    margin-top: 12px;
    margin-bottom: 20px;
-   margin-left: 12px;
+   margin-left: 20px;
    cursor: pointer;
 
 }
@@ -130,7 +129,7 @@
 .container__modal__movies{
     display: flex;
     justify-content: center;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     align-items: center;
     flex-wrap: wrap;
     height: 400px;
@@ -140,7 +139,7 @@
 .scroll__items{
     height: 355px;
     scrollbar-width: 10px;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
    
 }    
 
@@ -163,3 +162,22 @@
   ::-webkit-scrollbar-thumb:hover {
     background: #a09e9e;
   }
+
+  .explore__button{
+    text-align: center;
+    margin-top: 15%;
+  }
+
+.explore__button Button{
+    background-color: rgba(121, 31, 31, 0.549);
+    width: 200px;
+    color: whitesmoke;
+    font-size: 11px;
+    font-weight: 500;
+    font-family: verdana;
+}
+
+
+.explore__button p{
+    font-size: 30px;;
+}
