--- a/src/Components/AppBar/Appbar.Component.css
+++ b/src/Components/AppBar/Appbar.Component.css
@@ -1,17 +1,18 @@
 .container__appbar{
     width: 100% !important;
-    height: 55px;
+    height: 30px;
     position: fixed;
     top:0;
     left:231px;
     padding-left: 50px;
     background-color: #242424f4;
+    /* background-color: red; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding-top: 13px;
     padding-bottom: 10px;
- 
+    /* margin-top: 6px; */
 
     z-index: 20;
     /* background-color: blue; */
@@ -23,7 +24,7 @@
     justify-content: center;
     align-items: center;
 
-    margin-top: -5px;
+    margin-top: 10px;
 }
 
 .icons__bar{
@@ -38,6 +39,7 @@
     cursor: pointer;
     margin-left: 7px;
     padding: 2px;
+    
   
 }
 .icons__bar:hover img{
@@ -56,7 +58,8 @@
 
 .container__icon img{
     transform : scale(.9) ;
-    width: 80px;
+    margin-top: 15px;
+    width: 60px;
 }
  
 
