--- a/src/Pages/Discover/Discover.Page.css
+++ b/src/Pages/Discover/Discover.Page.css
@@ -106,6 +106,52 @@
 
 }
 
+.pagination button{
+    background-color: rgb(66, 65, 65);
+    border:none;
+    border-radius: 50%;
+    margin: 0 8px;
+    height: 35px;
+    width: 35px !important;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.pagination button:hover{
+    opacity: .8;
+}
+.pagination p{
+    font-weight: 500;
+}
+.pagination{
+    margin-top: 120px;
+    right: 12%;
+    width: 100px !important;
+    z-index: 100;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
